--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: fastadi
-Title: Data Adaptive Matrix Imputation
-Version: 0.1.0
+Title: Self-Tuning Data Adaptive Matrix Imputation
+Version: 0.1.0.9000
 Authors@R: 
     c(person(given = "Alex",
              family = "Hayes",
@@ -17,26 +17,34 @@ Authors@R:
       person(given = "Karl",
              family = "Rohe",
              role = "aut"))
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Implements the AdaptiveImpute matrix completion
+    algorithm of 'Intelligent Initialization and Adaptive Thresholding for
+    Iterative Matrix Completion',
+    <https://amstat.tandfonline.com/doi/abs/10.1080/10618600.2018.1518238>.
+    AdaptiveImpute is useful for embedding sparsely observed matrices,
+    often out performs competing matrix completion algorithms, and
+    self-tunes its hyperparameter, making usage easy.
 License: MIT + file LICENSE
-Imports: 
+URL: https://github.com/RoheLab/fastadi
+BugReports: https://github.com/RoheLab/fastadi/issues
+Depends: 
     Matrix,
-    RSpectra,
-    methods,
+    R (>= 3.1)
+Imports: 
     glue,
-    Rcpp
-Encoding: UTF-8
-LazyData: true
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.1
-URL: https://github.com/alexpghayes/fastadi
-BugReports: https://github.com/alexpghayes/fastadi/issues
+    methods,
+    Rcpp,
+    RSpectra
 Suggests: 
-    testthat,
     knitr,
-    rmarkdown
-VignetteBuilder: knitr
+    rmarkdown,
+    testthat
 LinkingTo: 
     Rcpp,
     RcppArmadillo
+VignetteBuilder: 
+    knitr
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
