--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,12 +29,15 @@ URL: https://github.com/RoheLab/fastadi
 BugReports: https://github.com/RoheLab/fastadi/issues
 Depends: 
     Matrix,
-    R (>= 3.1)
+    R (>= 3.1),
+    LRMF3
 Imports: 
     glue,
     methods,
     Rcpp,
-    RSpectra
+    RSpectra,
+    logger,
+    ellipsis
 Suggests: 
     knitr,
     rmarkdown,
@@ -48,3 +51,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Remotes: 
+    RoheLab/LRMF3
