--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,11 @@ S3method(adaptive_initialize,sparseMatrix)
 S3method(citation_impute,LRMF)
 S3method(citation_impute,default)
 S3method(citation_impute,sparseMatrix)
+S3method(print,adaptive_imputation)
 export(adaptive_impute)
 export(adaptive_initialize)
 export(citation_impute)
 export(new_adaptive_imputation)
-export(print.adaptive_imputation)
 import(LRMF3)
 import(Matrix)
 importFrom(RSpectra,svds)
