Address ropensci autotests, see ropenscilabs/statistical-software-review#3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,12 @@ S3method(citation_impute,LRMF)
 S3method(citation_impute,default)
 S3method(citation_impute,sparseMatrix)
 S3method(print,adaptive_imputation)
-export(adaptive_imputation)
 export(adaptive_impute)
 export(adaptive_initialize)
 export(citation_impute)
 import(LRMF3)
 import(Matrix)
+importFrom(LRMF3,dim_and_class)
 importFrom(RSpectra,svds)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
