Efficient sparse SVDs in approximate adaptive initialize

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ S3method(citation_impute,LRMF)
 S3method(citation_impute,default)
 S3method(citation_impute,sparseMatrix)
 S3method(print,adaptive_imputation)
+S3method(svds,SigmaP)
+S3method(svds,SigmaT)
 export(adaptive_impute)
 export(adaptive_initialize)
 export(citation_impute)
