--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,4 @@ importFrom(logger,log_debug)
 importFrom(logger,log_info)
 importFrom(methods,as)
 importFrom(stats,sd)
-useDynLib(fastadi, .registration = TRUE)
+#useDynLib(fastadi, .registration = TRUE)
