minor change in namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(adaptive_initialize)
 export(citation_impute)
 import(LRMF3)
 import(Matrix)
+import(RcppArmadillo)
+import(RcppParallel)
 importFrom(LRMF3,dim_and_class)
 importFrom(RSpectra,svds)
 importFrom(Rcpp,evalCpp)
