--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,7 @@ LinkingTo:
     RcppArmadillo,
     RcppParallel
 Remotes: 
-    YunyiShen/LRMF3
+    RoheLab/LRMF3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
