--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,5 +50,5 @@ Remotes:
     RoheLab/LRMF3
 Encoding: UTF-8
 LazyData: true
-Roxygen: list(markdown = TRUE)
+Roxygen: list(markdown = TRUE, roclets = c ("namespace", "rd", "srr::srr_stats_roclet"))
 RoxygenNote: 7.1.1.9000
