Add website to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Description: Implements the AdaptiveImpute matrix completion
     often out performs competing matrix completion algorithms, and
     self-tunes its hyperparameter, making usage easy.
 License: MIT + file LICENSE
-URL: https://github.com/RoheLab/fastadi
+URL: https://rohelab.github.io/fastadi/, https://github.com/RoheLab/fastadi
 BugReports: https://github.com/RoheLab/fastadi/issues
 Depends: 
     LRMF3,
