Use Rcpp::XPtr to avoid some data copying
- Yields 2x speedup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,14 @@ S3method(adaptive_initialize,sparseMatrix)
 S3method(citation_impute,LRMF)
 S3method(citation_impute,default)
 S3method(citation_impute,sparseMatrix)
+S3method(citation_impute2,LRMF)
+S3method(citation_impute2,default)
+S3method(citation_impute2,sparseMatrix)
 S3method(print,adaptive_imputation)
 export(adaptive_impute)
 export(adaptive_initialize)
 export(citation_impute)
+export(citation_impute2)
 import(LRMF3)
 import(Matrix)
 importFrom(LRMF3,dim_and_class)
